<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IniciarSesion.iniciar_sesion"
    android:background="@color/colorCelesteC">

    <Button
        android:id="@+id/txtRegistrarse"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:text="@string/Registrarse"
        android:background="@android:color/transparent"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:onClick="redireccion_registrarse"
        android:layout_gravity="end"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imgCerebroLogin"
        android:layout_width="match_parent"
        android:layout_height="125sp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="30sp"
        app:srcCompat="@mipmap/cerebro_celeste" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginBottom="5sp"
        android:text="@string/MensajeBienvenida"
        android:textAlignment="center"
        android:textColor="@color/colorBlanco"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/IniciarSesion"
        android:textAlignment="center"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_usuario_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/Usuario"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_contrasena_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:layout_marginBottom="10sp"
        />

    <CheckBox
        android:id="@+id/chkRecordar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="20sp"
        android:text="@string/RememberMe" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="38sp"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_marginBottom="20sp"
        android:onClick="iniciar_sesion"
        android:background="@drawable/boton_login"
        android:text="@string/Ingresar" />


    <Button
        android:id="@+id/btn_recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="10dp"
        android:onClick="redireccion_recuperar"
        android:text="@string/Recuperar"
        android:textAlignment="center"
        android:background="@android:color/transparent"
        android:textStyle="italic" />


</LinearLayout>