<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCelesteC"
    android:orientation="vertical"
    tools:context=".Registrarse.registrarse" >

    <ImageView
        android:id="@+id/ImgCerebroRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="125sp"
        android:layout_marginTop="80sp"
        android:layout_marginBottom="30sp"
        app:srcCompat="@mipmap/cerebro_celeste"
        />

    <TextView
        android:id="@+id/txtSeleccionarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/SelectPerfil"
        android:textAlignment="center"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="100sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/boton_login"
        android:text="@string/Paciente" />

    <Button
        android:id="@+id/btnFamiliar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="100sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/boton_login"
        android:text="@string/Familiar" />

    <Button
        android:id="@+id/btnProfesional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="100sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/boton_login"
        android:text="@string/Profesional" />


</LinearLayout>