<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCelesteC"
    android:orientation="vertical"
    tools:context=".Registrarse.registrar_datos" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ImgCerebroRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="125sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30sp"
                app:srcCompat="@mipmap/cerebro_celeste" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="@string/Nombre" />

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="@string/Apellido" />

            <EditText
                android:id="@+id/txt_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="30sp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:text="@string/FN" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="60sp"
                        android:text="@string/Sexo" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/txt_fechanacimiento"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="50sp"
                        android:ems="10"
                        android:inputType="datetime" />

                    <RadioGroup
                        android:layout_width="197dp"
                        android:layout_height="75dp"
                        >

                        <RadioButton
                            android:id="@+id/radio_femenino"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20sp"
                            android:text="@string/Femenino" />

                        <RadioButton
                            android:id="@+id/radio_masculino"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20sp"
                            android:text="@string/Masculino" />

                    </RadioGroup>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:text="@string/DNI" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10sp"
                    >

                    <EditText
                        android:id="@+id/txt_dni"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="50sp"
                        android:ems="10"
                        android:inputType="number" />

                </TableRow>


            </TableLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="@string/Email" />

            <EditText
                android:id="@+id/txt_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="@string/Usuario" />

            <EditText
                android:id="@+id/txt_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1"
                    android:text="@string/Contraseña" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ConfirmarC" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_contrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    />

                <EditText
                    android:id="@+id/txt_repito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:layout_marginLeft="20sp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_matricula_numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                android:text="@string/Matricula" />

            <EditText
                android:id="@+id/txt_matricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                android:ems="10"
                android:inputType="textPersonName"
                />

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Registrarse"
                android:layout_marginTop="15dp"
                android:background="@drawable/boton_login"
                android:layout_marginRight="120sp"
                android:layout_marginLeft="120sp"
                android:layout_marginBottom="20sp"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>