<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCelesteC"
    android:orientation="vertical">

                <SearchView
                    android:id="@+id/buscar_usuario_vinculaciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/nombre_ape"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:layout_marginLeft="9dp"
                    />

                    <TextView
                        android:id="@+id/no_hay_usuarios"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="9dp"
                        android:layout_marginRight="12dp"
                        android:textStyle="italic"
                        android:textSize="16dp"
                        android:text="@string/no_hay_usuarios"
                        />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <CheckBox
        android:id="@+id/chk_familiares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="9dp"
        android:text="@string/familiares"
        android:checked="true"
        android:visibility="gone"
        android:textColor="@color/colorCelesteD"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/chk_medicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/medicos"
        android:checked="true"
        android:visibility="gone"
        android:textColor="@color/colorCelesteD"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="130dp" />
</RelativeLayout>


                <ListView
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginVertical="5dp"
                    android:layout_gravity="center"
                    android:id="@+id/list_usuarios_vinculaciones"
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="@android:color/transparent"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="12dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="9dp"
                    android:paddingRight="9dp"
                    android:paddingTop="10dp"
                    android:layout_marginTop="10dp"
                    android:scrollbarStyle="outsideOverlay" />
</LinearLayout>